# emb-whacamole

./: .gitignore  CHECKLIST.txt  CS4447_embedded_project_spec.md  DEMO_CHEATSHEET.md  E2E_TEST.md  README.md  TESTING.md  checklist.txt  proj-spec.md  project.mk  test-buffering.md  test.md
agent/: .env.example  README.md  fake_uart_device.py  pyproject.toml
agent/config/: logging.json
agent/src/agent/: __init__.py  __main__.py  argparser.py  bridge.py  env.py  logging_conf.py  mqtt.py  test_bridge.py  types.py  utils.py
agent/src/agent/misc/: __init__.py  argparser.py  env.py  logging_conf.py  utils.py
cloud/: .env.example  .gitignore  README.md  __init__.py  app.py  config.py  device_protocol.md  fake_device.py  models.py  mqtt_worker.py  pyproject.toml  requirements.txt  ruff.toml  storage.py  test_mqtt_worker.py
cloud/src/cloud/: __main__.py  app.py  env.py  mqtt.py  state.py  types.py  utils.py
cloud/static/css/: dashboard.css
cloud/static/html/: dashboard.html
cloud/static/js/: dashboard.js
dashboard/: .env.example  README.md  mock_game.py  pyproject.toml
dashboard/src/dashboard/: __init__.py  __main__.py  app.py  env.py  leaderboard.py  mqtt.py  state.py  types.py
dashboard/static/html/: dashboard.html
emb/: .clang-format  FreeRTOSConfig.h  Makefile  project.mk
emb/include/: agent.h  btn.h  btns.h  game.h  io_expander.h  led.h  leds.h  pause.h  rtos_queues.h  scr_utils.h  telemetry.h  uart_cmd.h  utils.h
emb/src/: agent.c  btn.c  btns.c  game.c  io_expander.c  led.c  leds.c  main.c  pause.c  rtos_queues.c  scr_utils.c  telemetry.c  uart_cmd.c  utils.c
include/: io_expander.h  utils.h
src/: io_expander.c  main.c
(+2 files in other folders)
