[project]
name = "agent"
version = "0.1.0"
description = "Serial-to-MQTT bridge for Whackamole game"
readme = "README.md"
license-file = "../LICENSE"
authors = [{ name = "darragh0" }, { name = "jjola00" }, { name = "tomjoyce1" }]
requires-python = ">=3.12"
dependencies = [
  "pyserial>=3.5",
  "rich-argparse>=1.7.2",
  "paho-mqtt>=1.6",
  "python-dotenv>=1.2.1",
]

[project.scripts]
agent = "agent.__main__:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
pythonVersion = "3.12"
